Criando estrutura e tasks

--- a/index.html
+++ b/index.html
@@ -1,19 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="geral.css">
-	<link rel="stylesheet" type="text/css" href="jonas-style.css">
-	<link rel="stylesheet" type="text/css" href="mohamed-style.css">
-	<link rel="stylesheet" type="text/css" href="tiago-style.css">
+	<link rel="stylesheet" type="text/css" href="common.css">
+	<link rel="stylesheet" type="text/css" href="header.css">
+	<link rel="stylesheet" type="text/css" href="content.css">
+	<link rel="stylesheet" type="text/css" href="footer.css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Trabalho em equipe</title>
 </head>
 <body>
-	<div>
-		<div></div>
-		<div></div>
-		<div></div>
+	<div class="container">
+		<div class="header"> <!-- JONAS -->
+			<ul class="list">
+				<li class="list-item"><a class="text-item" href="">Home</a></li>
+				<li class="list-item"><a class="text-item" href="">Sobre nós</a></li>
+				<li class="list-item"><a class="text-item" href="">Contato</a></li>
+			</ul>
+			<div>
+				<a class="button" href="">Entrar</a>
+				<a class="button" href="">Cadastre-se</a>
+			</div>
+		</div>
+		<div class="content"> <!-- MOHAMED -->
+			<h1 class="title">Introdução ao CSS</h1>
+			<p>O <span class="destaque">HTML</span> é usado para estruturar o conteúdo de uma página web, como o texto, imagens, links e formulários, enquanto o <span class="destaque">CSS</span> é usado para estilizar e organizar esses elementos. Com o CSS, é possível definir cores, fontes, tamanhos de texto, margens, bordas, posicionamento de elementos e muito mais.</p>
+			<p>O <span class="destaque">CSS</span> funciona como uma camada separada do <span class="destaque">HTML</span>, o que significa que os desenvolvedores da web podem criar estilos em um arquivo CSS separado e aplicá-los a todas as páginas HTML do site. Isso torna mais fácil manter um visual consistente em todo o site e torna a manutenção do código mais fácil.</p>
+			<p>Além disso, o <span class="destaque">CSS</span> usa o conceito de "cascata", que significa que as propriedades definidas em um nível superior afetam os níveis inferiores. Por exemplo, se uma propriedade de fonte é definida no elemento "body" (corpo) do <span class="destaque">CSS</span>, todas as fontes de texto em níveis inferiores herdarão essa propriedade, a menos que uma propriedade diferente seja definida especificamente para esses elementos.</p>
+			<p>O <span class="destaque">CSS</span> é uma tecnologia muito flexível e poderosa, que permite criar estilos personalizados para diferentes dispositivos e formatos de tela. Com o <span class="destaque">CSS</span>, é possível criar layouts responsivos, que se adaptam automaticamente ao tamanho da tela em que estão sendo exibidos, tornando os sites mais acessíveis e amigáveis para os usuários em dispositivos móveis.</p>
+			<p>Em resumo, o CSS é uma ferramenta fundamental para os desenvolvedores da web, que permite criar estilos e layouts personalizados para as páginas HTML e XML, tornando a experiência do usuário mais agradável e facilitando a manutenção do código.</p>
+		</div>
+		<div class="footer"> <!-- TIAGUINHO -->
+			<p class="copyright">Copyright - Todos os direitos reservados</p>
+		</div>
 	</div>
 </body>
 </html>
