--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 	<div class="container">
 		<div class="header"> <!-- JONAS -->
 			<ul class="list">
-				<li class="list-item"><a class="text-item" href="">Home</a></li>
+				<li class="list-item"><a class="text-item" href="index.html">Home</a></li>
 				<li class="list-item"><a class="text-item" href="">Sobre nós</a></li>
-				<li class="list-item"><a class="text-item" href="">Contato</a></li>
+				<li class="list-item"><a class="text-item" href="contact.html">Contato</a></li>
 			</ul>
 			<div>
 				<a class="button" href="">Entrar</a>
