--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div class="header"> <!-- JONAS -->
 			<ul class="list">
 				<li class="list-item"><a class="text-item" href="index.html">Home</a></li>
-				<li class="list-item"><a class="text-item" href="">Sobre nós</a></li>
+				<li class="list-item"><a class="text-item" href="about-us.html">Sobre nós</a></li>
 				<li class="list-item"><a class="text-item" href="contact.html">Contato</a></li>
 			</ul>
 			<div>
